@@ -88,6 +88,7 @@ V1.1 Release
 -Updated the AutofacAdapter to support AutoFac 2.0.
 -Changed IsolatedStorageStateManager to use GetUserStoreForDomain for WPF and GetUserStoreForApplication for Silverlight. The method which gets the storage file is now overridable as well.
 -Changed Presenters to raise lifecycle events after initialization/activation/etc are complete.
+-Ensured that PresenterManagers do not call initialize/activate when CurrentPresenter is set unless they themselves are initialized/activated.
 
 V1.1 Release Candidate
 -Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
